# whatsapp

./: LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
whatsapp/: hooks.py  whatsapp_sales_order.py
whatsapp/config/: desktop.py
whatsapp/public/: build.json
whatsapp/public/css/: whatsapp.css
whatsapp/public/js/: website_whatsapp.js
